# bioinf-suffiks-tree-ukkonen

./: .gitignore  CMakeLists.txt  FASTAFormat.cpp  FASTAFormat.h  FASTA_example.txt  FASTQFormat.cpp  FASTQFormat.h  LICENSE  README.md  main.cpp
include/: Constants.h  Edge.h  FASTAFormat.h  FASTQFormat.h  Functions.h  Node.h  Suffix.h
src/: Constants.cpp  Edge.cpp  FASTAFormat.cpp  FASTQFormat.cpp  Functions.cpp  Node.cpp  Suffix.cpp  main.cpp
test/: FASTQ_2.txt  ensembl (2).txt  ensembl (4).txt  ensembl (6).txt  sample.txt
test/genomes/: ensembl1.txt  ensembl2.txt  ensembl6.txt  ensembl8.txt  ensembl9.txt  genome1.txt  genome2.txt  genome3.txt  genome4.txt  genome5.txt
test/samples/: FASTA_1.txt  FASTQ_1.txt  sample1.txt  sample10.txt  sample2.txt  sample3.txt  sample4.txt  sample5.txt  sample6.txt  sample7.txt  sample8.txt  sample9.txt
